# backend-rust-app

./: README.md
todo-rs/: Cargo.toml  diesel.toml
todo-rs/migrations/2025-03-14-182551_create_todos_table/: up.sql
todo-rs/src/: handlers.rs  main.rs  models.rs
