[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
diesel = { version = "2.2.8", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
cookie = "0.16"
csurf = "2.0"
jsonwebtoken = "8.0"
tracing = "0.1"
tracing-subscriber = "0.3"